Make plots for all data

--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -31,7 +31,6 @@ act_data_raw <- compile_activities(act_list)
 readr::write_csv(act_data_raw, here::here("data", "raw", "activities.csv"))
 ``` 
 ```{r raw2processed}
-act_data_raw <- readr::read_csv(here::here("data", "raw", "activities.csv"))
 act_data <- act_data_raw %>% mutate(start_date = start_date %>% lubridate::ymd_hms(),
                     start_date_local = start_date_local %>% lubridate::ymd_hms(),
                     elapsed_time_min = round((elapsed_time / 60), 1),
@@ -39,28 +38,82 @@ act_data <- act_data_raw %>% mutate(start_date = start_date %>% lubridate::ymd_h
                     moving_time_min = round((moving_time / 60), 1),
                     moving_time_hrs = round((moving_time / 60 / 60), 1),
                     mday = start_date %>% lubridate::ymd_hms() %>% lubridate::mday(),
-                    week = start_date %>% lubridate::ymd_hms() %>% lubridate::floor_date('week'))
+                    week = start_date %>% lubridate::ymd_hms() %>% lubridate::floor_date('week'),
+                    type = fct_reorder(type, elapsed_time, .fun = sum, .desc=TRUE),
+                    year = start_date %>% lubridate::year()
+                    ) %>%
+    arrange(start_date) %>%
+    group_by(type) %>%
+    mutate(elapsed_hrs_cum_type = cumsum(elapsed_time))
+
 readr::write_csv(act_data, here::here("data", "processed", "activities.csv"))
 ```
-```{r filter}
-y2019 <- lubridate::interval(lubridate::ymd("2019-01-01"), lubridate::ymd("2019-12-31"))
-aug2019 <- lubridate::interval(lubridate::ymd("2019-08-01"), lubridate::ymd("2019-08-31"))
-data_2019 <- act_data %>% filter(start_date %within% y2019)
-data_aug <- data_2019 %>% filter(start_date %within% aug2019)
+```{r globals}
+plot_bar <- function(data) {
+    plot <- data %>% ggplot2::ggplot(aes(x=week, y=elapsed_time_hrs, fill=type)) +
+        geom_col(position="stack") + 
+        scale_fill_manual("type", values=colors) + 
+        ylim(0, 25) +
+        scale_x_datetime(date_breaks = "4 weeks", date_labels = "%b %d") + 
+        theme_classic() + 
+        theme(axis.text.x = element_text(angle = 90, hjust = 1))
+}
+filter_year <- function(data, date_col, year_str) {
+    year_interval <- lubridate::interval(lubridate::ymd(paste0(year_str, "-01-01")), 
+                                         lubridate::ymd(paste0(year_str, "-12-31")))
+    data %>% filter(UQ(as.symbol(date_col)) %within% year_interval)
+}
+palette = RColorBrewer::brewer.pal(n = act_data$type %>% unique() %>% length(), name = "Paired")
+colors = list()
+
+colors[["Ride"]] <- palette[[4]]
+colors[["Run"]] <- palette[[8]]
+colors[["RockClimbing"]] <- palette[[3]]
+colors[["Rowing"]] <- palette[[1]]
+colors[["Swim"]] <- palette[[2]]        
+colors[["Hike"]] <- palette[[6]]
+colors[["Walk"]] <- palette[[5]] 
+colors[["Elliptical"]] <- palette[[7]]
+
+aspect_ratio <- 4/3
+height <- 5
+width <- height * aspect_ratio
 ```
 
-## duration by week
+## Plot duration by week
 
-```{r over_time}
-data_2019 %>% 
-    ggplot2::ggplot(aes(x=week, y=elapsed_time_hrs, fill=type)) +
-    geom_col(position="stack") + 
-    scale_fill_brewer(palette = "Paired") +
-    scale_x_datetime(date_breaks = "4 weeks", date_labels = "%b %d") + 
+```{r}
+plot_bar_all <- plot_bar(act_data) +
+    scale_x_datetime(date_breaks = "4 weeks", date_labels = "%b %Y") +
+    ggtitle("All Strava Activities")
+ggsave(plot_bar_all, filename = here::here("figures", "bar_all.png"), 
+       width = width, height = height)
+plot_bar_all
+```
+
+```{r}
+plots = list()
+for (year in 2017:2019) {
+    year <- as.character(year)
+    plot_bar_year <- plot_bar(filter_year(act_data, "start_date", year)) +
+        ggtitle(paste0(year, " Activites"))
+    ggsave(plot_bar_year, filename = here::here("figures", paste0("bar_", year,".png")),
+           width = width, height = height)
+    print(plot_bar_year)
+    plots[[year]] = plot_bar_year
+}
+```
+
+## Plot cumulative duration
+```{r}
+plot_line <- act_data %>% ggplot(aes(x=start_date, y=elapsed_hrs_cum_type, color=type)) +
+    geom_line() + 
+    scale_color_brewer(palette = "Dark2") +
+    #scale_color_manual("type", colors) +  # bug in ggplot?
+    scale_x_datetime(date_breaks = "4 weeks", date_labels = "%b %Y") + 
     theme_classic() + 
-    theme(axis.text.x = element_text(angle = 90, hjust = 1))
+    theme(axis.text.x = element_text(angle = 90, hjust = 1)) +
+    ggtitle("Cumulative Activity Time")
+ggsave(plot_line, filename=here::here("figures", "line_all.png"), width = width, height = height)
+plot_line
 ```
-
-
-## cumulative duration
-
