--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -2,7 +2,9 @@
 title: "Activity Report"
 author: "Kelly Sovacool"
 date: "`r format(Sys.Date(), '%Y-%m-%d')`"
-output: html_document
+output: 
+    html_document: default
+    github_document: default
 ---
 
 ```{r setup, include=FALSE}
