Link to github repo in report

--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -6,7 +6,10 @@ output:
   html_document:
     toc: true
     toc_float: true
+github-repo: kelly-sovacool/strava
 ---
+
+View the source code on GitHub: [kelly-sovacool/strava](https://github.com/kelly-sovacool/strava)
 
 ```{r setup, include=FALSE}
 library(dplyr)
@@ -23,10 +26,10 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE)
 
 ```{r}
 act_data <- read_data(here::here("data", "processed", "activities.csv"))
-table <- act_data %>% 
-    group_by(year, type) %>% 
-    summarize(n=n(), 
-              sum_dist_mi=round(sum(distance_mi),1), 
+table <- act_data %>%
+    group_by(year, type) %>%
+    summarize(n=n(),
+              sum_dist_mi=round(sum(distance_mi),1),
               med_dist_mi=round(median(distance_mi), 1),
               sum_time_hrs=sum(elapsed_time_hrs),
               med_time_hrs=median(elapsed_time_hrs))
@@ -53,13 +56,13 @@ colors <- set_colors(data)
 
 ```{r}
 # sum
-table %>% 
+table %>%
     filter(type %in% c("Ride", "Run")) %>%
     ggplot(aes(year, sum_dist_mi, fill=type, label=sum_dist_mi)) +
     geom_col() +
     geom_text(vjust=-0.3) +
     scale_fill_manual("type", values=colors) +
-    facet_wrap(~type, nrow=1) + 
+    facet_wrap(~type, nrow=1) +
     scale_y_continuous(breaks=pretty_breaks()) +
     ggtitle("Total Distance (mi) by year") +
     theme_classic()
@@ -70,13 +73,13 @@ knitr::include_graphics(here::here("figures", "jitter_dist_year.png"))
 ### Duration
 ```{r}
 # sum
-table %>% 
+table %>%
     filter(type %in% c("Ride", "Run")) %>%
     ggplot(aes(year, sum_time_hrs, fill=type, label=sum_time_hrs)) +
     geom_col() +
     geom_text(vjust=-0.3) +
     scale_fill_manual("type", values=colors) +
-    facet_wrap(~type, nrow=1) + 
+    facet_wrap(~type, nrow=1) +
     scale_y_continuous(breaks=pretty_breaks()) +
     ggtitle("Total Time (hrs) by year") +
     theme_classic()
