--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -40,14 +40,14 @@ set_colors <- function(data) {
     colors
 }
 colors <- set_colors(act_data)
-table <- act_data %>%
+table_sum <- act_data %>%
     group_by(year, type) %>%
     summarize(n=n(),
               sum_dist_mi=round(sum(distance_mi),1),
               med_dist_mi=round(median(distance_mi), 1),
               sum_time_hrs=sum(elapsed_time_hrs),
               med_time_hrs=median(elapsed_time_hrs))
-knitr::kable(table)
+knitr::kable(table_sum)
 ```
 
 ## Progress over time
@@ -56,13 +56,13 @@ knitr::kable(table)
 
 ```{r}
 # sum
-table %>%
+table_sum %>%
     filter(type %in% c("Ride", "Run")) %>%
     ggplot(aes(year, sum_dist_mi, fill=type, label=sum_dist_mi)) +
     geom_col(position="dodge") +
     geom_text(vjust=-0.3, position = position_dodge(width=1)) +
     scale_fill_manual("type", values=colors) +
-    facet_wrap(~type, nrow=1) +
+    #facet_wrap(~type, nrow=1) +
     scale_y_continuous(breaks=pretty_breaks()) +
     ggtitle("Total Distance (mi) by year") +
     theme_classic()
@@ -73,13 +73,13 @@ knitr::include_graphics(here::here("figures", "jitter_dist_year.png"))
 ### Duration
 ```{r}
 # sum
-table %>%
+table_sum %>%
     filter(type %in% c("Ride", "Run")) %>%
     ggplot(aes(year, sum_time_hrs, fill=type, label=sum_time_hrs)) +
     geom_col(position="dodge") +
     geom_text(vjust=-0.3, position = position_dodge(width=1)) +
     scale_fill_manual("type", values=colors) +
-    facet_wrap(~type, nrow=1) +
+    #facet_wrap(~type, nrow=1) +
     scale_y_continuous(breaks=pretty_breaks()) +
     ggtitle("Total Time (hrs) by year") +
     theme_classic()
