--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -56,7 +56,7 @@ knitr::kable(table_sum)
 
 ```{r}
 # sum
-table_sum %>%
+bar_sum_dist <- table_sum %>%
     filter(type %in% c("Ride", "Run")) %>%
     ggplot(aes(year, sum_dist_mi, fill=type, label=sum_dist_mi)) +
     geom_col(position="dodge") +
@@ -66,6 +66,8 @@ table_sum %>%
     scale_y_continuous(breaks=pretty_breaks()) +
     ggtitle("Total Distance (mi) by year") +
     theme_classic()
+ggsave(bar_sum_dist, filename = here::here("figures", "bar_sum_dist.png"))
+bar_sum_dist
 # jitter
 knitr::include_graphics(here::here("figures", "jitter_dist_year.png"))
 ```
@@ -73,16 +75,18 @@ knitr::include_graphics(here::here("figures", "jitter_dist_year.png"))
 ### Duration
 ```{r}
 # sum
-table_sum %>%
-    filter(type %in% c("Ride", "Run")) %>%
+bar_sum_hrs <- table_sum %>%
+    filter(type %in% c("Ride", "Run", "RockClimbing", "Rowing", "Swim")) %>%
     ggplot(aes(year, sum_time_hrs, fill=type, label=sum_time_hrs)) +
     geom_col(position="dodge") +
-    geom_text(vjust=-0.3, position = position_dodge(width=1)) +
+    geom_text(vjust=-0.3, position = position_dodge(width=0.87)) +
     scale_fill_manual("type", values=colors) +
     #facet_wrap(~type, nrow=1) +
     scale_y_continuous(breaks=pretty_breaks()) +
     ggtitle("Total Time (hrs) by year") +
     theme_classic()
+ggsave(bar_sum_hrs, filename = here::here("figures", "bar_sum_hrs.png"))
+bar_sum_hrs
 # jitter
 knitr::include_graphics(here::here("figures", "jitter_time_year.png"))
 ```
