--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -16,7 +16,7 @@ library(here)
 library(knitr)
 library(rmarkdown)
 source(here::here("code", "read_processed_data.R"))
-knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.path = "figures/")
 ```
 
 ## Progress over time
