--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -21,6 +21,12 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.path = "fi
 
 ## Progress over time
 
+## Last 4 weeks
+```{r}
+knitr::include_graphics(here::here("figures", "bar_time_last_4_weeks.png"))
+```
+
+
 ### Distance
 
 ```{r}
