--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.path = "fi
 ## Progress over time
 
 ## Last 4 weeks
-```{r}
+```{r, out.height='50%'}
 knitr::include_graphics(here::here("figures", "bar_time_last_4_weeks.png"))
 ```
 
