--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.path = "fi
 
 ## Last 4 weeks
 ```{r, out.height='50%'}
-knitr::include_graphics(here::here("figures", "bar_time_last_4_weeks.png"))
+knitr::include_graphics(here::here("figures", "plot_summary_4_weeks.png"))
 ```
 
 
