--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -20,20 +20,14 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.path = "fi
 ```
 
 ## Progress over time
+```{r}
+knitr::include_graphics(here::here('figures', 'heatmap_calendar.png'))
+```
 
 ## Last 4 weeks
 ```{r, out.height='50%'}
 knitr::include_graphics(here::here("figures", "plot_summary_4_weeks.png"))
 ```
-
-## Overall
-
-```{r}
-knitr::include_graphics(here::here('figures', 'point_ride_grid.png'))
-knitr::include_graphics(here::here('figures', 'point_run_grid.png'))
-```
-
-
 
 ## Distance
 
@@ -58,18 +52,12 @@ knitr::include_graphics(here::here("figures", "jitter_time_year.png"))
 knitr::include_graphics(here::here("figures", "bar_all_month.png"))
 ```
 
-#### By week
+## Pace / Distance / Time
 
 ```{r}
-knitr::include_graphics(here::here("figures", "bar_all_week.png"))
+knitr::include_graphics(here::here('figures', 'point_ride_grid.png'))
+knitr::include_graphics(here::here('figures', 'point_run_grid.png'))
 ```
-
-#### By day
-
-```{r}
-knitr::include_graphics(here::here("figures", "bar_all_day.png"))
-```
-
 
 ## Duration by activity
 
