--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -23,59 +23,44 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.path = "fi
 knitr::include_graphics(here::here("figures", "plot_summary_4_weeks.png"))
 ```
 
+## Duration
+
+```{r}
+knitr::include_graphics(here::here("figures", "jitter_type_time.png"))
+knitr::include_graphics(here::here("figures", "box_weekday_time.png"))
+knitr::include_graphics(here::here('figures', "jitter_weekday_time_grid.png"))
+```
+
 ## Distance
 
 ```{r}
-# sum
-knitr::include_graphics(here::here("figures", "bar_sum_dist.png"))
-# jitter
-knitr::include_graphics(here::here("figures", "jitter_dist_year.png"))
+knitr::include_graphics(here::here("figures", "jitter_type_dist_log2.png"))
+knitr::include_graphics(here::here("figures", "box_weekday_dist_wrap.png"))
+knitr::include_graphics(here::here('figures', "jitter_weekday_dist_grid.png"))
 ```
 
-## Duration
-```{r}
-# sum
-knitr::include_graphics(here::here("figures", "bar_sum_hrs.png"))
-# jitter
-knitr::include_graphics(here::here("figures", "jitter_time_year.png"))
-```
-
-#### By month
-
-```{r}
-knitr::include_graphics(here::here("figures", "bar_all_month.png"))
-```
-
-## Pace / Distance / Time
+## Pace & Speed
 
 ```{r}
 knitr::include_graphics(here::here('figures', 'point_ride_grid.png'))
 knitr::include_graphics(here::here('figures', 'point_run_grid.png'))
 ```
 
-## Duration by activity
+## Progress by year
 
 ```{r}
-knitr::include_graphics(here::here("figures", "jitter_type_time.png"))
+knitr::include_graphics(here::here("figures", "bar_all_month.png"))
+knitr::include_graphics(here::here('figures', 'heatmap_calendar.png'))
 ```
 
-### Day of the week
-
 ```{r}
-knitr::include_graphics(here::here("figures", "box_weekday_time.png"))
-knitr::include_graphics(here::here('figures', "jitter_weekday_time_grid.png"))
+knitr::include_graphics(here::here("figures", "bar_sum_dist.png"))
+knitr::include_graphics(here::here("figures", "jitter_dist_year.png"))
 ```
 
-## Distance by activity
-
 ```{r}
-knitr::include_graphics(here::here("figures", "jitter_type_dist_log2.png"))
-```
-
-### Day of the week
-```{r}
-knitr::include_graphics(here::here("figures", "box_weekday_dist_wrap.png"))
-knitr::include_graphics(here::here('figures', "jitter_weekday_dist_grid.png"))
+knitr::include_graphics(here::here("figures", "bar_sum_hrs.png"))
+knitr::include_graphics(here::here("figures", "jitter_time_year.png"))
 ```
 
 ## Cumulative
@@ -83,7 +68,6 @@ knitr::include_graphics(here::here('figures', "jitter_weekday_dist_grid.png"))
 ```{r}
 knitr::include_graphics(here::here("figures", "line_time.png"))
 knitr::include_graphics(here::here("figures", "line_dist.png"))
-knitr::include_graphics(here::here('figures', 'heatmap_calendar.png'))
 ```
 
 ## Summary table
