Only include last 2-3 years for summary bar plots

--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -62,7 +62,7 @@ knitr::include_graphics(here::here('figures', 'heatmap_calendar_year.png'))
 knitr::include_graphics(here::here('figures', 'bar_time_last_12_mo.png'))
 ```
 
-### All Strava activities
+### (Almost) All Strava activities
 ```{r}
 knitr::include_graphics(here::here('figures', 'heatmap_calendar.png'))
 knitr::include_graphics(here::here("figures", "bar_all_month.png"))
