Plot weekly mileage for last ~3 years

--- a/code/report.Rmd
+++ b/code/report.Rmd
@@ -62,9 +62,10 @@ knitr::include_graphics(here::here('figures', 'heatmap_calendar_year.png'))
 knitr::include_graphics(here::here('figures', 'bar_time_last_12_mo.png'))
 ```
 
-### (Almost) All Strava activities
+### Last ~3 years of activities
 ```{r}
 knitr::include_graphics(here::here('figures', 'heatmap_calendar.png'))
+knitr::include_graphics(here::here('figures', 'bar_mpw_years.png'))
 knitr::include_graphics(here::here("figures", "bar_all_month.png"))
 ```
 
